# anime-character-birthday-feed

./: .gitignore  anime_character_birthday_feed.rss  compose.yaml
.github/workflows/: ci.yaml
src/: Dockerfile
src/anime_character_birthday_feed/: pyproject.toml  test.rss
src/anime_character_birthday_feed/anime_character_birthday_feed/: idol_images.py  main.py
