[tool.poetry]
name = "anime_character_birthday_feed"
version = "0.1.0"
description = ""
authors = ["uutan1108"]
readme = "README.md"
packages = [
    { include = "anime_character_birthday_feed" },
    { include = "anime_character_birthday_feed/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.10.1"
feedgenerator = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
